@@ -1,0 +1,188 @@
+;;; rails-webkick.el --- functions for manadge webrick
+
+;; Copyright (C) 2006 Galinsky Dmitry <dima dot exe at gmail dot com>
+
+;; Authors: Galinsky Dmitry <dima dot exe at gmail dot com>,
+;;          Rezikov Peter <crazypit13 (at) gmail.com>
+
+;; Keywords: ruby rails languages oop
+;; $URL$
+;; $Id$
+
+;;; License
+
+;; This program is free software; you can redistribute it and/or
+;; modify it under the terms of the GNU General Public License
+;; as published by the Free Software Foundation; either version 2
+;; of the License, or (at your option) any later version.
+
+;; This program is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+
+;; You should have received a copy of the GNU General Public License
+;; along with this program; if not, write to the Free Software
+;; Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+
+;;; Code:
+
+(defcustom rails-ws:port "3000"
+  "Default web server port"
+  :group 'rails
+  :type 'string
+  :tag "Rails Web Server  Port")
+
+(defcustom rails-ws:server-name "http://localhost"
+  "Protocol and the hostname for web server or other rails server"
+  :group 'rails
+  :type 'string
+  :tag "Rails Web Server Default Server")
+
+(defvar rails-ws:buffer-name "*RailsWebServer*")
+(defvar rails-ws:available-servers-list (list "mongrel" "lighttpd" "webrick"))
+(defvar rails-ws:default-server-type (first rails-ws:available-servers-list))
+(defvar rails-ws:process-environment nil)
+
+(defun rails-ws:default-server-type-p (type)
+  (string= type rails-ws:default-server-type))
+
+(defun rails-ws:switch-default-server-type (type)
+  "Switch default server type to run."
+  (interactive (list (completing-read "Server type (use autocomplete): "
+                                      rails-ws:available-servers-list
+                                      nil t
+                                      rails-ws:default-server-type)))
+  (setq rails-ws:default-server-type type)
+  (message (concat "Using " (upcase type) " as default server type")))
+
+(defun rails-ws:running-p ()
+  "Return t if a WebServer process is running."
+  (if (get-buffer-process rails-ws:buffer-name) t nil))
+
+(defun rails-ws:sentinel-proc (proc msg)
+  (when (memq (process-status proc) '(exit signal))
+    (setq rails-ws:process-environment nil))
+  (princ
+   (replace-regexp-in-string "\n" ""
+                             (format "%s - %s"
+                                     (upcase rails-ws:default-server-type)
+                                     msg))))
+
+(defun rails-ws:start(&optional env)
+  "Start a WEBrick process with ENV environment if ENV is not set
+using `rails-webrick:default-env'."
+  (interactive (list (rails-read-enviroment-name)))
+  (rails-core:with-root
+   (root)
+   (let ((proc (get-buffer-process rails-ws:buffer-name))
+         (dir default-directory))
+     (unless proc
+       (progn
+         (setq default-directory root)
+         (unless env
+           (setq env rails-default-environment))
+         (let ((rails-ws:process-environment env)
+               (process
+                (apply 'start-process-shell-command
+                       rails-ruby-command
+                       rails-ws:buffer-name
+                       rails-ruby-command
+                       (list "script/server"
+                             (concat "-e " env)
+                             (concat "-p " rails-ws:port)))))
+           (set-process-sentinel process 'rails-ws:sentinel-proc)
+           (setq default-directory dir)
+           (message (format "%s (%s) starting with port %s"
+                            (upcase rails-ws:default-server-type)
+                            rails-ws:process-environment
+                            rails-ws:port))))))))
+
+(defun rails-ws:start-default ()
+  "Start WebServer using the default environment defined in
+`rails-default-environment'."
+  (interactive)
+  (rails-ws:start rails-default-environment))
+
+(defun rails-ws:start-development ()
+  (interactive)
+  (rails-ws:start "development"))
+
+(defun rails-ws:start-production ()
+  (interactive)
+  (rails-ws:start "production"))
+
+(defun rails-ws:start-test ()
+  (interactive)
+  (rails-ws:start "test"))
+
+(defun rails-ws:stop()
+  "Stop the WebServer process."
+  (interactive)
+  (let ((proc (get-buffer-process rails-ws:buffer-name)))
+    (if proc (kill-process proc))))
+
+(defun rails-ws:toggle-start-stop ()
+  "Toggle Rails WebServer start/stop with default environment."
+  (interactive)
+  (if (rails-ws:running-p)
+      (rails-ws:stop)
+    (rails-ws:start-default)))
+
+(defun rails-ws:print-status ()
+  (interactive)
+  (message
+   (concat rails-ws:default-server-type
+           " (" (if rails-ws:process-environment
+                    rails-ws:process-environment
+                  rails-default-environment) ")"
+           " is "
+           (if (rails-ws:running-p)
+               (concat "running with port " rails-ws:port)
+             "stoping"))))
+
+;;;;;;;;;; Open browser ;;;;;;;;;;
+
+(defun rails-webrick:open-browser (&optional address)
+  "Open a browser on the main page of the current Rails project
+server."
+  (interactive)
+  (let ((url (concat (concat rails-webrick:server-name
+                             ":"
+                             rails-webrick:port
+                             "/"
+                             address ))))
+    (message "Opening browser: %s" url)
+    (browse-url url)))
+
+(defun rails-webrick:open-browser-on-controller (&optional controller action params)
+  "Open browser on the controller/action/id for the current
+file."
+  (interactive
+   (list
+    (completing-read "Controller name: "
+                     (list->alist (rails-core:controllers t)))
+    (read-from-minibuffer "Action name: ")
+    (read-from-minibuffer "Params: ")))
+  (rails-core:with-root
+   (root)
+   (when (string-not-empty controller)
+     (rails-webrick:open-browser
+      (concat (rails-core:file-by-class controller t) "/"
+              (if (string-not-empty action) (concat action "/")) params)))))
+
+(defun rails-webrick:auto-open-browser (ask-parameters?)
+  "Autodetect the current action and open browser on it with.
+Prefix the command to ask parameters for action."
+  (interactive "P")
+  (rails-core:with-root
+   (root)
+   (if (find (rails-core:buffer-type) '(:view :controller))
+       (when-bind (controller (rails-core:current-controller))
+                  (rails-webrick:open-browser-on-controller
+                   controller (rails-core:current-action)
+                   (when ask-parameters?
+                     (read-from-minibuffer "Parameters: "))))
+     (message "You can auto-open browser only in view or controller"))))
+
+(provide 'rails-ws)
